--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                             android:layout_width="match_parent"
+                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                              android:layout_height="match_parent">
 
+    <TextView
+            android:layout_width="267dp"
+            android:layout_height="36dp"
+            android:id="@+id/welcome_message" android:layout_marginTop="28dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.504"/>
+    <TextView
+            android:layout_width="267dp"
+            android:layout_height="33dp"
+            android:id="@+id/welcome_quote" android:layout_marginTop="88dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.504"/>
+    <Button
+            android:text="Button"
+            android:layout_width="354dp"
+            android:layout_height="47dp"
+            android:id="@+id/home_profile" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="160dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.571"/>
+    <Button
+            android:text="Button"
+            android:layout_width="354dp"
+            android:layout_height="0dp"
+            android:id="@+id/home_friend" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.571" android:layout_marginTop="228dp"
+            app:layout_constraintTop_toTopOf="parent"/>
+    <Button
+            android:text=" sign out"
+            android:layout_width="354dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/home_logout" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginTop="300dp" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.428"/>
 </android.support.constraint.ConstraintLayout>
