--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,7 +18,7 @@
             android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.504"/>
     <Button
-            android:text="Button"
+            android:text="WIP: Profile Setup"
             android:layout_width="354dp"
             android:layout_height="47dp"
             android:id="@+id/home_profile" app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="160dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.571"/>
     <Button
-            android:text="Button"
+            android:text="My Friends"
             android:layout_width="354dp"
             android:layout_height="0dp"
             android:id="@+id/home_friend" app:layout_constraintStart_toStartOf="parent"
