--- a/app/src/main/res/layout/fragment_post_item.xml
+++ b/app/src/main/res/layout/fragment_post_item.xml
@@ -6,7 +6,7 @@
                                              android:layout_height="wrap_content">
 
     <TextView
-            android:id="@+id/post_title"
+            android:id="@+id/friend_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -29,5 +29,5 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/post_title" />
+            app:layout_constraintTop_toBottomOf="@+id/friend_title" />
 </android.support.constraint.ConstraintLayout>
